syntax = "proto3";

package node_group_rpc;

service NodeGroupRpc {
  rpc AddServer(AddServerRequest) returns (AddServerResponse);
  rpc GetServer(GetServerRequest) returns (GetServerResponse);
  rpc Replicate(ReplicateRequest) returns (ReplicateResponse);
}

message AddServerRequest {
  string addr = 1;
}

message AddServerResponse {
  string result = 1;
}

message GetServerRequest {
}

message GetServerResponse {
  repeated string result = 1;
}

message ReplicateRequest {
  string key = 1;
  string value = 2;
  string source = 3;
}

message ReplicateResponse {
}