syntax = "proto3";

package node_rpc;

service NodeRpc {
  rpc Set(SetRequest) returns (SetResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Ping(PingRequest) returns (PingResponse);
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  string result = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message PingRequest {
}

message PingResponse {
  string result = 1;
}